<resources>
    <string name="app_name">Book Store</string>
    <string name="reset_link_sent">The reset link has been successfully sent.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="publishedDate">Published date: </string>
    <string name="authors">Authors: %1$s</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="your_password">Your password:</string>
    <string name="your_email">Your email:</string>
    <string name="reset_password">Reset password</string>
    <string name="your_name">Your name:</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
</resources>